# agentictesting

./: .gitignore  README.md  pyproject.toml  testforge.yaml
docs/: ARCHITECTURE.md  DESIGN.md  HARNESS_GUIDE.md  META_HARNESS.md  SETUP.md  TOOLS_REFERENCE.md  WORKING.md
example_project/: app.py  testforge.yaml
example_project/artifacts/: report.html  report.json
example_project/tests/: test_api.py  test_app.py
example_rust/: testforge.yaml
example_rust/artifacts/: junit.xml  report.html  report.json
example_rust/src/: lib.rs
example_ts/: package.json  testforge.yaml  vitest.config.ts
example_ts/artifacts/: junit.xml  report.html  report.json
example_ts/src/: tasks.ts
example_ts/tests/: tasks.test.ts
src/testforge/: __init__.py  cli.py  config.py  defaults.py  graph.py  llm.py  logging.py  state.py
src/testforge/agents/: __init__.py  api_agent.py  base.py  browser.py  executor.py  healer.py  integration.py  planner.py  reporter.py  security.py  tool_scout.py  triage.py  unit.py
src/testforge/detection/: __init__.py  detector.py  routing.py
src/testforge/memory/: __init__.py  budget.py  compactor.py  store.py
src/testforge/meta/: __init__.py  evaluator.py  evolver.py  filesystem.py  history.py  proposer.py  scorer.py
src/testforge/models/: __init__.py  enums.py  evidence.py  tool_result.py
src/testforge/reporting/: __init__.py  html_reporter.py  json_reporter.py  junit_xml.py  unified.py
src/testforge/sandbox/: __init__.py  docker.py  policy.py  protocol.py  subprocess_sandbox.py
src/testforge/tools/: __init__.py  dynamic_adapter.py  (+9 more)
(+14 files in other folders)
